[project]
name = "ledger"
version = "0.1.0"
description = "Django personal accounting application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "django>=5.1.4",
    "whitenoise>=6.3.0",
    "django-cors-headers>=4.6.0",
    "django-crispy-forms>=2.0",
    "crispy-bootstrap5>=0.7",
    "django-debug-toolbar>=4.2.0",
    "django-import-export>=3.3.5",
    "django-storages>=1.14.3",
    # REST API
    "djangorestframework>=3.14.0",
    "drf-extra-fields>=3.4.1",
    # Database
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=1.2.0",
    # Task queue
    "celery>=5.4.0",
    "redis>=5.2.1",
    # AWS
    "boto3>=1.42.87",
    # AI
    "google-genai>=1.14.0",
    # WSGI server
    "gunicorn>=20.1.0",
    # Data processing
    "pandas>=2.2.3",
    "python-dateutil>=2.8.2",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "factory-boy>=3.3.0",
    "faker>=22.2.0",
    "beautifulsoup4>=4.12.3",
    "flake8>=7.0.0",
    "pylint>=2.16.1",
    "pylint-django>=2.5.3",
    "isort>=5.12.0",
]
